--- a/api/people/models/People.settings.json
+++ b/api/people/models/People.settings.json
@@ -7,7 +7,10 @@
   },
   "options": {
     "increments": true,
-    "timestamps": true,
+    "timestamps": [
+      "created_at",
+      "updated_at"
+    ],
     "comment": ""
   },
   "attributes": {
@@ -22,6 +25,11 @@
     },
     "shortDescription": {
       "type": "text"
+    },
+    "Image": {
+      "model": "file",
+      "via": "related",
+      "plugin": "upload"
     }
   }
 }
