feat: add people short

--- a/api/articles/models/Articles.settings.json
+++ b/api/articles/models/Articles.settings.json
@@ -41,6 +41,10 @@
     },
     "additionalLongDescription": {
       "type": "array"
+    },
+    "person": {
+      "group": "people_short",
+      "type": "group"
     }
   }
 }
